[package]
name = "ulid-wasm"
version = "0.1.0"
authors = ["codemountains <4kz12zz@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
ulid = "1.0.0"
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
getrandom = { version = "0.2.7", features = ["js"] }
instant = { version = "0.1.12", features = [ "wasm-bindgen" ] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
